modal alignment fixed

--- a/frontend/src/app/components/leave-applymodel/leave-applymodel.component.scss
+++ b/frontend/src/app/components/leave-applymodel/leave-applymodel.component.scss
@@ -3,7 +3,7 @@
   width: 168%;
   top: 15px;
   right: 171px;
-  border-radius: 25px;
+  border-radius: 22px;
   border: none;
 }
 
