--- a/frontend/src/app/components/leave-conformmodel/leave-conformmodel.component.scss
+++ b/frontend/src/app/components/leave-conformmodel/leave-conformmodel.component.scss
@@ -1,72 +1,80 @@
-h3{
-    font-weight: 400;
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-
-
-
-
-.modal-content{
-    width: 168%;
-    top: 129px;
-    right: 171px;
-    height: auto;
-    border: none;
-  }
-  
-
-  #exampleModal3{
-    backdrop-filter: blur(1px);
-  }
-
-
-.btn-close{
-    margin-right: 10px;
-    background-color: #f4f4f7;
-    padding: 10px;
-    border-radius: 50%;
-    
-  }
-
-  .btn-closer {
-    padding: 15px 35px 15px 35px;
-    border: none;
-    border-radius: 40px;
-    background-color: #f4f4f7;
-    color: black;
-    width: 100%;
-    font-weight: 500;
+h3 {
+  font-weight: 400;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+.hand-emoj img {
+  position: absolute;
+  left: 19px;
+  top: 13px;
+}
+.modal-content {
+  width: 150%;
+  top: 149px;
+  right: 138px;
+  height: auto;
+  border: none;
+  border-radius: 22px;
+}
+.modal-header {
+  padding: 47px 13px 24px 16px;
 }
 
-.btn-add{
-    padding: 15px 35px 15px 35px;
-    border: none;
-    border-radius: 40px;
-    background-color: #C083FA;
-    color: black;
-    width: 100%;
-    font-weight: 500;
+#exampleModal3 {
+  backdrop-filter: blur(1px);
 }
-  
-  .modal-title{
-    font-weight: 900;
-  }
 
+.btn-close {
+  margin-right: 10px;
+  background-color: #f4f4f7;
+  padding: 10px;
+  border-radius: 50%;
+  margin-top: -62px;
+}
 
+p {
+  font-size: 14px;
+}
 
+.btn-closer {
+  padding: 15px 35px 15px 35px;
+  border: none;
+  border-radius: 40px;
+  background-color: #f4f4f7;
+  color: black;
+  width: 100%;
+  font-weight: 500;
+}
+
+.btn-add {
+  padding: 15px 35px 15px 35px;
+  border: none;
+  border-radius: 40px;
+  background-color: #c083fa;
+  color: black;
+  width: 100%;
+  font-weight: 500;
+}
+
+.modal-title {
+  font-weight: 900;
+}
 
 .leave-summery-type {
-    padding: 10px;
+  padding: 10px;
+  font-size: 14px;
+  font-weight: 600;
 }
 
-span {
-    background-color: #f4f4f7;
-    border-radius: 20px;
-    color: black;
-    padding: 3px 10px 3px 10px;
-  }
+.calender {
+  background-color: #f4f4f7;
+  border-radius: 20px;
+  color: black;
+  padding: 3px 10px 3px 10px;
+  font-size: 14px;
+  font-weight: 400;
+}
 
-  .modal-footer{
-    border: none !important;
-  }
+.modal-footer {
+  border: none !important;
+}
